<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.proyectoterminal.upibi.glusimo.Interfaz">

    <item
        android:id="@+id/conectar"
        android:orderInCategory="100"
        android:title="@string/menu_conectar"
        app:showAsAction="never" />

    <item
        android:id="@+id/configuracion"
        android:orderInCategory="100"
        android:title="@string/titulo_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/test"
        android:orderInCategory="100"
        android:title="@string/menu_test"
        app:showAsAction="never" />

    <item
        android:id="@+id/test_leds"
        android:orderInCategory="100"
        android:title="@string/menu_leds"
        app:showAsAction="never" />
</menu>
