<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center|top"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <!--Titulo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            style="@style/tituloFragment"
            android:id="@+id/tituloFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/titulo_config_simu"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <!--Linea-->
        <TextView
            android:id="@+id/linea"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorLetra" />
    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/corazon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="@dimen/margen_chiquis"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            style="@style/textoFragment"
            android:id="@+id/texto_slider" />

        <SeekBar
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/slider"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/intestino"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="@dimen/margen_chiquis" >

        <TextView
            style="@style/textoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            android:id="@+id/textView3" />

        <SeekBar
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/higado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="@dimen/margen_chiquis" >

        <TextView
            style="@style/textoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            android:id="@+id/textView4" />

        <SeekBar
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar4"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/cerebro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="@dimen/margen_chiquis" >

        <TextView
            style="@style/textoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            android:id="@+id/textView2" />

        <SeekBar
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar2"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/musculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="@dimen/margen_chiquis" >

        <TextView
            style="@style/textoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slider"
            android:id="@+id/textView" />

        <SeekBar
            android:foregroundGravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/margen_chiquis"
        android:visibility="visible"
        android:id="@+id/pancreas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <TextView
            style="@style/textoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_spinner"
            android:layout_marginBottom="@dimen/margen_chiquis"
            android:id="@+id/texto_spinner" />

        <Spinner
            android:layout_marginTop="@dimen/margen_chiquis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner" />
    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/margen_chiquis"
        android:visibility="visible"
        android:id="@+id/config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            >

            <TextView
                android:layout_weight="3"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min"
                style="@style/elemento_lista"
                android:id="@+id/tvm1"
                />

            <EditText
                android:hint="@string/hint_min"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/colorLetraHint"
                android:inputType="number"
                android:ems="20"
                android:id="@+id/min"
                />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            >

            <TextView
                android:layout_weight="3"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/min"
                style="@style/elemento_lista"
                android:id="@+id/tvm2"
                />

            <EditText
                android:hint="@string/hint_max"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColorHint="@color/colorLetraHint"
                android:inputType="number"
                android:ems="20"
                android:id="@+id/max"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/margen_chiquis"
        android:visibility="gone"
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_weight="4" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EVT"
            android:id="@+id/EVT"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EVC1"
            android:id="@+id/EVCD" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula izquierda Cerebro"
            android:id="@+id/EVCI" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula de músculo izquierdo"
            android:id="@+id/EVMI" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula de músculo derecho"
            android:id="@+id/EVMD" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula Hígado"
            android:id="@+id/EVH" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula Pancreas"
            android:id="@+id/EVP" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula Intestino"
            android:id="@+id/EVI" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Electroválvula Riñones"
            android:id="@+id/EVR" />

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/margen_chiquis"
        android:visibility="gone"
        android:id="@+id/leds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_weight="4" >

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_todos"
            android:id="@+id/LEDT"
            android:checked="false" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_rojos"
            android:id="@+id/LEDR" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_verdes"
            android:id="@+id/LEDV" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_azules"
            android:id="@+id/LEDA" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_higado"
            android:id="@+id/LEDH" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_cerebro"
            android:id="@+id/LEDC" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_musculo"
            android:id="@+id/LEDM" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_intestino"
            android:id="@+id/LEDI" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led_pancreas"
            android:id="@+id/LEDP" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_aceptar"
            style="@style/textoBoton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/pop_boton_aceptar" />

        <Button
            style="@style/textoBoton"
            android:id="@+id/b_cancelar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:text="@string/pop_boton_cancelar" />

    </LinearLayout>

</LinearLayout>
